--- a/web3/Views/Shared/_Navbar.cshtml
+++ b/web3/Views/Shared/_Navbar.cshtml
@@ -78,7 +78,7 @@
                             @if (User.IsInRole("Admin"))
                             {
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" asp-controller="Product" asp-action="Index"><i class="bi bi-gear me-2"></i>Admin Panel</a></li>
+                                <li><a class="dropdown-item" asp-controller="Admin" asp-action="Dashboard"><i class="bi bi-gear me-2"></i>Admin Panel</a></li>
                             }
                             <li><hr class="dropdown-divider"></li>
                             <li>
