--- a/web3/Views/Shared/_Layout.cshtml
+++ b/web3/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Styles -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     @await RenderSectionAsync("Styles", required: false)
@@ -20,6 +20,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="~/favicon.ico">
 </head>
+
 <body>
     <!-- Navigation -->
     <partial name="_Navbar" />
@@ -39,7 +40,6 @@
 
     <!-- Modern Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     <!-- Initialize UI -->
