--- a/web3/Views/Shared/_Navbar.cshtml
+++ b/web3/Views/Shared/_Navbar.cshtml
@@ -73,7 +73,6 @@
                             @User.Identity.Name
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" asp-controller="Account" asp-action="Profile"><i class="bi bi-person me-2"></i>Profile</a></li>
                             <li><a class="dropdown-item" asp-controller="Order" asp-action="History"><i class="bi bi-receipt me-2"></i>Orders</a></li>
                             @if (User.IsInRole("Admin"))
                             {
@@ -81,11 +80,11 @@
                                 <li><a class="dropdown-item" asp-controller="Admin" asp-action="Dashboard"><i class="bi bi-gear me-2"></i>Admin Panel</a></li>
                             }
                             <li><hr class="dropdown-divider"></li>
-                            <li>
-                                <form asp-controller="Account" asp-action="Logout" method="post">
-                                    <button type="submit" class="dropdown-item text-danger"><i class="bi bi-box-arrow-right me-2"></i>Logout</button>
-                                </form>
-                            </li>
+                            <form asp-controller="Account" asp-action="Logout" method="get">
+                                <button type="submit" class="dropdown-item text-danger">
+                                    <i class="bi bi-box-arrow-right me-2"></i>Logout
+                                </button>
+                            </form>
                         </ul>
                     </div>
                 }
