--- a/web3/Views/Shared/_AdminLayout.cshtml
+++ b/web3/Views/Shared/_AdminLayout.cshtml
@@ -88,6 +88,9 @@
                 <a asp-controller="Admin" asp-action="Products" class="list-group-item list-group-item-action bg-transparent">
                     <i class="bi bi-box-seam me-2"></i>Produits
                 </a>
+                <a asp-controller="Admin" asp-action="Analytics" class="list-group-item list-group-item-action bg-transparent">
+                    <i class="bi bi-graph-up me-2"></i>Analytique
+                </a>
                 <a asp-controller="Admin" asp-action="ImportProduct" class="list-group-item list-group-item-action bg-transparent">
                     <i class="bi bi-download me-2"></i>Importer AliExpress
                 </a>
